--- a/Project_5Foker/.classpath
+++ b/Project_5Foker/.classpath
@@ -6,5 +6,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="lib" path="C:/java/Foker_util.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
